Avances de Negocios, Usuario y Footer

--- a/src/Style/Negocio.css
+++ b/src/Style/Negocio.css
@@ -1,14 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-/* font-family: 'Poppins', sans-serif; */
-
-/* html {
-  width: 8654px;
-  height: 8654px;
-} */
-
-* {
-  font-family: "Poppins", sans-serif;
-}
 
 .title {
   color: #343434;
@@ -85,4 +74,80 @@
 
 img:hover{
   transform: scale(0.9);
+}
+.kampanee-negocios{
+  position: relative;
+  top: 200px;
+  max-height: 900px;
+  background-color: #FFEFDF;
+
+}
+#celular{
+  width: 500px;
+  height: 800px;
+  position: relative;
+  left: 900px;
+  bottom:  600px;
+
+}
+.kampaneelogodueño{
+  margin-right: 1300px;
+  padding-top: 200px;
+  padding-bottom: 100px;
+
+}
+.dueñotitle{
+  margin-left: 130px;
+}
+.dueñodescripcion{
+  margin-left: 130px;
+  margin-top: 30px;
+}
+.dueñobotones{
+  margin-left: 130px;
+}
+
+
+.descubre-kampanee{
+  position: relative;
+  top: 300px;
+}
+.kampaneeicon{
+  margin-left: 900px;
+}
+.descubretitle{
+  margin-top: 30px;
+  margin-left: 750px;
+}
+.controlnegocio{
+  margin-left: 1300px;
+  position: relative;
+  bottom: 40px;
+}
+.inventarioadmin{
+  margin-left: 800px;
+  position: relative;
+  top: 60px;
+
+}
+.gestionventas{
+  margin-left: 400px;
+  position: relative;
+  top: 185px;
+}
+
+.funcionakampanee{
+  position: relative;
+  top: 500px;
+}
+.funcionatittle{
+  margin-left: 1000px;
+  position: relative;
+  top: 200px;
+
+}
+.administra{
+  margin-left: 1000px;
+  position: relative;
+  top: 200px;
 }
