--- a/src/Style/Usuario.css
+++ b/src/Style/Usuario.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Titillium+Web:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
+.usuario-container{
+    width: 100%;
+    width: 1800px;
+    display: "flex",
+}
+
+
 .logo {
     width: 297px;
     height: 51;
@@ -336,3 +346,49 @@
     margin-left: 550px;
     margin-bottom: -25px;
 }
+
+@media (max-width: 768px) {
+    .contenedor01 {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center; /* Centra el texto horizontalmente */
+    }
+  
+    .img1 {
+        margin: 0 auto; /* Centra la imagen horizontalmente */
+        width: 100%; /* Asegurarse de que la imagen se ajuste al ancho del contenedor */
+        max-width: 1036px; /* Establecer un ancho máximo si es necesario */
+        height: auto; /* Mantener la relación de aspecto */
+        text-align: center;
+        order: 1;
+      }
+    .contenedor-2 {
+        order: 2;
+
+    }
+  
+    .texto-1 {
+      color: #343434;
+      font-size: 55px;
+      font-style: normal;
+      margin-top: 10px; /* Ajusta el margen superior según tu preferencia */
+      text-align: center;
+      width: 580px;
+      margin-left: auto; /* Alinea el texto al centro horizontalmente */
+      margin-right: auto; /* Alinea el texto al centro horizontalmente */
+    }
+  
+    .texto-2 {
+      color: #565656;
+      font-size: 18px;
+      width: 570px;
+      text-align: center;
+      margin-top: 20px; /* Ajusta el margen superior según tu preferencia */
+      margin-left: auto; /* Alinea el texto al centro horizontalmente */
+      margin-right: auto; /* Alinea el texto al centro horizontalmente */
+    }
+
+
+  }
+  
