--- a/src/Style/Usuario.css
+++ b/src/Style/Usuario.css
@@ -361,6 +361,8 @@
         max-width: 1036px; /* Establecer un ancho máximo si es necesario */
         height: auto; /* Mantener la relación de aspecto */
         text-align: center;
+        margin-left: 1500px;
+        margin-right: 350px;
         order: 1;
       }
     .contenedor-2 {
@@ -378,7 +380,36 @@
       margin-left: auto; /* Alinea el texto al centro horizontalmente */
       margin-right: auto; /* Alinea el texto al centro horizontalmente */
     }
+    .texto-01 {
+        width: 750px;
+        color: #343434;
+        font-size: 45px;
+        font-style: normal;
+        margin-top: 420px;
+        margin-left: 507px;
+        text-align: center;
+        margin-bottom: 55px;
+    }
+
+    .container {
+        margin-left: 490px;
+    }
+    .contenedor03{
+        margin-left: 530px;
+
+    }
+
+    .img2{
+        margin-top: 90px;
+        margin-bottom: 150px;
+        margin-left: 1500px;
+        margin-right: 350px;    }
   
+    .contenedor04 {
+        margin-top: 960px;
+        width: 768px;
+height: 1129px;
+    }
     .texto-2 {
       color: #565656;
       font-size: 18px;
@@ -392,3 +423,121 @@
 
   }
   
+  @media (max-width: 390px) {
+    .usuario-container {
+        max-width: 390px;
+        width: 100%;
+        padding: 35px;
+    }
+
+    .logo {
+        height: 19px;
+        margin: 0;
+        width: auto;
+    }
+
+    .texto-1 {
+        width: auto;
+        color: #343434;
+        font-size: 24px;
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: 500;
+        margin: 49px 0 0;
+    }
+
+    .texto-2 {
+        width: auto;
+        font-family: Poppins;
+        font-size: 12px;
+    }
+
+    .contenedor-2 {
+        margin-top: 60px;
+        display: flex;
+        text-align: center;
+        justify-content: space-between;
+        height: 42px;
+    }
+
+    .boton-1 {
+        margin: 0;
+        padding: 0 30px 0;
+        border-radius: 5px;
+        background: #FF8000;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        color: white;
+        font-size: 11px;
+    }
+
+    .google {
+        margin: 0;
+    }
+
+    .img1 {
+        margin-top: 50px;
+        margin-bottom: 130px;
+    }
+
+    .texto-01 {
+        width: auto;
+        font-family: Poppins;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        margin: 0;
+        text-align: center;
+    }
+
+    .container {
+        max-width: 390px;
+        width: 100%;
+        margin: 0;
+    }
+
+    .contenedor01 {
+        width: 100%;
+        height: auto;
+        padding: 18px 10px 18px;
+    }
+
+    .contenedor02 {
+        width: 100%;
+        margin: 0;
+        height: auto;
+        padding: 18px 10px 18px;
+    }
+
+    .contenedor03 {
+        width: 100%;
+        margin: 0;
+        height: auto;
+        padding: 23px;
+    }
+
+    .contenedor01>p,
+    .contenedor02>p,
+    .contenedor03>p {
+        font-family: Poppins;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        margin: 15px 0 0 0;
+        width: auto;
+    }
+
+    .contenedor03>p {
+        margin-top: 0 !important;
+    }
+
+    .contenedor01>img,
+    .contenedor02>img,
+    .contenedor03>img {
+        width: 54px;
+        height: 54px;
+        margin: 0;
+    }
+}
