arreglo de cards en footer

--- a/src/Style/Footer.css
+++ b/src/Style/Footer.css
@@ -20,7 +20,7 @@
     line-height: normal;
 }
 
-.cards {
+.cards-footer {
     display: flex;
     align-items: center;
     justify-content: center;
