--- a/src/Style/Usuario.css
+++ b/src/Style/Usuario.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Titillium+Web:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
-.usuario-container{
+.usuario-container {
     width: 100%;
     width: 1800px;
     display: "flex",
@@ -203,8 +203,8 @@
 .logo0 {
     width: 297px;
     height: 51;
-    margin-left: 47px;
-    margin-top: 300px;
+    margin-left: 1077px;
+    margin-top: 220px;
 }
 
 
@@ -217,7 +217,7 @@
 
 .img3 {
     float: left;
-    margin-top: 90px;
+    margin-top: -160px;
     margin-right: 10px;
     width: 1036px;
     height: 844px;
@@ -347,197 +347,213 @@
     margin-bottom: -25px;
 }
 
+.contenedor-002 {
+    display: none;
+
+}
+
+.logo0-res {
+    display: none;
+
+}
+
+.texto-001-res {
+    display: none;
+
+}
+
+.texto-002-res {
+    display: none;
+
+}
+
+.contenedor-002-res {
+    display: none;
+
+}
+
 @media (max-width: 768px) {
-    .contenedor01 {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center; /* Centra el texto horizontalmente */
+
+    .logo0-res {
+        display: block;
+        margin-left: 610px;
+        width: 450px;
+        height: auto;
+        padding-top: 90px;
     }
-  
+
+    .texto-001-res {
+        color: #343434;
+        font-size: 65px;
+        margin-top: 110px;
+        display: block;
+        width: 850px;
+        text-align: center;
+        margin-left: 400px;
+
+    }
+
+    .contenedor-002-res {
+        display: block;
+        margin-top: 1110px;
+        margin-left: 590px;
+
+    }
+
+    .texto-001-res>span {
+        color: #FF8000;
+        font-weight: bold;
+    }
+
+    .texto-002-res {
+        color: #565656;
+        font-size: 25px;
+        width: 990px;
+        display: block;
+        text-align: center;
+        margin-left: 320px;
+        margin-top: 35px;
+
+
+    }
+
+    .usuario-container {
+        margin-left: 130px;
+    }
+
+    .contenedor-2 {
+        display: none;
+    }
+
+    .contenedor-002 {
+        display: block;
+        margin-left: 580px;
+        margin-bottom: -270px;
+
+    }
+
+    .contenedor01 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        /* Centra el texto horizontalmente */
+    }
+
     .img1 {
-        margin: 0 auto; /* Centra la imagen horizontalmente */
-        width: 100%; /* Asegurarse de que la imagen se ajuste al ancho del contenedor */
-        max-width: 1036px; /* Establecer un ancho máximo si es necesario */
-        height: auto; /* Mantener la relación de aspecto */
+        margin: 0 auto;
+        /* Centra la imagen horizontalmente */
+        width: 100%;
+        /* Asegurarse de que la imagen se ajuste al ancho del contenedor */
+        max-width: 1036px;
+        /* Establecer un ancho máximo si es necesario */
+        height: auto;
+        /* Mantener la relación de aspecto */
         text-align: center;
         margin-left: 1500px;
         margin-right: 350px;
         order: 1;
-      }
+    }
+
     .contenedor-2 {
         order: 2;
 
     }
-  
+
     .texto-1 {
-      color: #343434;
-      font-size: 55px;
-      font-style: normal;
-      margin-top: 10px; /* Ajusta el margen superior según tu preferencia */
-      text-align: center;
-      width: 580px;
-      margin-left: auto; /* Alinea el texto al centro horizontalmente */
-      margin-right: auto; /* Alinea el texto al centro horizontalmente */
+        color: #343434;
+        font-size: 55px;
+        font-style: normal;
+        margin-top: 10px;
+        /* Ajusta el margen superior según tu preferencia */
+        text-align: center;
+        width: 580px;
+        margin-left: auto;
+        /* Alinea el texto al centro horizontalmente */
+        margin-right: auto;
+        /* Alinea el texto al centro horizontalmente */
     }
+
     .texto-01 {
         width: 750px;
         color: #343434;
         font-size: 45px;
         font-style: normal;
-        margin-top: 420px;
         margin-left: 507px;
         text-align: center;
-        margin-bottom: 55px;
+        margin-bottom: 185px;
     }
 
     .container {
-        margin-left: 490px;
+        margin-left: 90px;
     }
-    .contenedor03{
+
+    .contenedor01 {
+        margin-left: 390px;
+    }
+
+    .contenedor03 {
         margin-left: 530px;
 
     }
 
-    .img2{
+    .img2 {
         margin-top: 90px;
         margin-bottom: 150px;
         margin-left: 1500px;
-        margin-right: 350px;    }
-  
+        margin-right: 350px;
+    }
+
+    .img3 {
+        margin-left: 305px;
+        margin-top: 150px;
+    }
+
+    .logo0 {
+        display: none;
+    }
+
+    .texto-001 {
+        display: none;
+    }
+
+    .texto-002 {
+        display: none;
+    }
+
+    .contenedor007 {
+        display: none;
+    }
+
+
     .contenedor04 {
-        margin-top: 960px;
+        margin-top: 1060px;
+        width: 100%;
+        height: 2000px;
+        margin-left: -60px;
+    }
+
+    .general {
+        width: 100%;
+    }
+
+    .logo-container {
+        max-width: 100%;
         width: 768px;
-height: 1129px;
-    }
-    .texto-2 {
-      color: #565656;
-      font-size: 18px;
-      width: 570px;
-      text-align: center;
-      margin-top: 20px; /* Ajusta el margen superior según tu preferencia */
-      margin-left: auto; /* Alinea el texto al centro horizontalmente */
-      margin-right: auto; /* Alinea el texto al centro horizontalmente */
-    }
-
-
-  }
-  
-  @media (max-width: 390px) {
-    .usuario-container {
-        max-width: 390px;
-        width: 100%;
-        padding: 35px;
-    }
-
-    .logo {
-        height: 19px;
-        margin: 0;
-        width: auto;
-    }
-
-    .texto-1 {
-        width: auto;
-        color: #343434;
-        font-size: 24px;
-        font-family: Poppins;
-        font-style: normal;
-        font-weight: 500;
-        margin: 49px 0 0;
     }
 
     .texto-2 {
-        width: auto;
-        font-family: Poppins;
-        font-size: 12px;
-    }
-
-    .contenedor-2 {
-        margin-top: 60px;
-        display: flex;
+        color: #565656;
+        font-size: 18px;
+        width: 570px;
         text-align: center;
-        justify-content: space-between;
-        height: 42px;
+        margin-top: 20px;
+        /* Ajusta el margen superior según tu preferencia */
+        margin-left: auto;
+        /* Alinea el texto al centro horizontalmente */
+        margin-right: auto;
+        /* Alinea el texto al centro horizontalmente */
     }
 
-    .boton-1 {
-        margin: 0;
-        padding: 0 30px 0;
-        border-radius: 5px;
-        background: #FF8000;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        border: none;
-        color: white;
-        font-size: 11px;
-    }
 
-    .google {
-        margin: 0;
-    }
-
-    .img1 {
-        margin-top: 50px;
-        margin-bottom: 130px;
-    }
-
-    .texto-01 {
-        width: auto;
-        font-family: Poppins;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 700;
-        margin: 0;
-        text-align: center;
-    }
-
-    .container {
-        max-width: 390px;
-        width: 100%;
-        margin: 0;
-    }
-
-    .contenedor01 {
-        width: 100%;
-        height: auto;
-        padding: 18px 10px 18px;
-    }
-
-    .contenedor02 {
-        width: 100%;
-        margin: 0;
-        height: auto;
-        padding: 18px 10px 18px;
-    }
-
-    .contenedor03 {
-        width: 100%;
-        margin: 0;
-        height: auto;
-        padding: 23px;
-    }
-
-    .contenedor01>p,
-    .contenedor02>p,
-    .contenedor03>p {
-        font-family: Poppins;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 500;
-        margin: 15px 0 0 0;
-        width: auto;
-    }
-
-    .contenedor03>p {
-        margin-top: 0 !important;
-    }
-
-    .contenedor01>img,
-    .contenedor02>img,
-    .contenedor03>img {
-        width: 54px;
-        height: 54px;
-        margin: 0;
-    }
 }
