--- a/src/Style/Footer.css
+++ b/src/Style/Footer.css
@@ -1,82 +1,148 @@
-.secc-footer {
-    max-width: 1920px;
-    width: 100%;
+.secc-principal {
+    padding: 70px !important;
 }
 
-/* conteiner ayuda */
+.secc-banner {
+  max-width: 1781px;
+  width: 100%;
+  height: 289px;
+  border-radius: 31px;
+  background: #ffe7cf;
+  margin-top: 150px;
 
-.container-ayuda {
-    position: relative;
-    padding-top: 133px;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
 }
 
-.titulo-1, .titulo-2 {
-    color: #343434;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 45px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-}
-
-.cards-footer {
-    display: flex;
+.banner-text {
+  display: flex;
+  flex-direction: column;
+    height: 100%;
     align-items: center;
     justify-content: center;
+    padding: 0 50px 0;
+}
+
+.banner-text > h1 {
+  color: #ff7f00;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 28px;
+}
+
+.banner-left {
     position: relative;
-    padding-right: 95px;
-    margin: 91px 0 180px;
+    bottom: 15px;
+    left: 0;
+    height: 319px;
 }
 
-.card-titulo-1 {
-    color: #343434;
-    font-family: Poppins;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 60px;
-    margin: 0 !important;
+.banner-right {
+  position: relative;
+  right: -20px;
 }
 
-.card-titulo-2 {
-    color: #FF8000;
-    font-family: Poppins;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 60px;
-    margin: 0 0 16px !important;
-}
-
-.card-izquierda>p {
-    width: 438px;
-}
-
-.card-izquierda>img {
-    position: absolute;
-    right: 18px;
-    bottom: 33px;
-}
-
-.card-izquierda {
-    max-width: 741px;
-    width: 100%;
-
-    border-radius: 52px;
-    background: #FFF5EB;
-    padding: 69px 35px 90px 79px;
-    position: relative;
-    left:  95px;
-}
-
-.card-derecha {
-    max-width: 743px;
-    width: 100%;
-    padding: 31px 2px 0 0;
-
-    border-radius: 52px;
-    background: #FF9932;
+.text-end {
     display: flex;
-    justify-content: end;
+    flex-direction: row;
+    margin: 160px 0 0 0;
+}
+
+.columns {
+    width: 25%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.asesor-1 {
+  position: relative;
+}
+
+.asesores .row {
+  padding: 0 180px 0;
+}
+
+.texto-asesor > h1 {
+  color: #757575;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.texto-asesor > p {
+  color: #ff8000;
+  font-family: Poppins;
+  font-size: 12px;
+}
+
+.texto-asesor > p,
+.texto-asesor > h1 {
+  text-align: left;
+}
+
+.texto-asesor-1 {
+  max-width: 403px;
+  width: 100%;
+  position: relative;
+  border-radius: 10px 10px 10px 0px;
+  border: 1px solid #ff8000;
+  height: 77px;
+  align-items: center;
+  display: flex;
+}
+
+.texto-asesor-1 > h1 {
+  font-size: 14px;
+  color: #717171;
+  font-family: Poppins;
+  margin-left: 17px;
+}
+
+.contact-wsp {
+  height: 39px;
+  width: auto;
+  border-radius: 0px 0px 8px 8px;
+  background: #55C455;
+  position: absolute;
+  left: 0;
+  bottom: 12px;
+  border: 0px;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 14px;
+  padding: 9px;
+}
+
+.contact-wsp>img {
+  margin-right: 9px;
 }
