--- a/src/Style/Usuario.css
+++ b/src/Style/Usuario.css
@@ -557,3 +557,136 @@
 
 
 }
+@media (max-width: 390px) {
+    .usuario-container {
+        max-width: 390px;
+        width: 100%;
+        padding: 35px;
+        margin-left: 0;
+    }
+
+    .logo {
+        height: 19px;
+        margin: 0;
+        width: auto;
+    }
+
+    .texto-1 {
+        width: auto;
+        color: #343434;
+        font-size: 24px;
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: 500;
+        margin: 49px 0 0;
+    }
+
+    .texto-2 {
+        width: auto;
+        font-family: Poppins;
+        font-size: 12px;
+    }
+
+    .contenedor-002 {
+        margin-top: 60px;
+        display: flex;
+        text-align: center;
+        justify-content: space-between;
+        height: 42px;
+        margin: 0;
+    }
+
+    .boton-1 {
+        margin: 0;
+        padding: 0 30px 0;
+        border-radius: 5px;
+        background: #FF8000;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        color: white;
+        font-size: 11px;
+    }
+
+    .google {
+        margin: 0;
+    }
+
+    .img1 {
+        margin: 50px 0 65px;
+        float: none;
+    }
+
+    .img2 {
+        margin: 70px 0 0;
+        float: none;
+        width: 100%;
+        height: auto;
+    }
+
+    .texto-01 {
+        width: auto;
+        font-family: Poppins;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        text-align: center;
+        margin: 137px 0 48px;
+    }
+
+    .container {
+        max-width: 390px;
+        width: 100%;
+        margin: 0;
+    }
+
+    .contenedor01 {
+        width: 100%;
+        height: auto;
+        padding: 18px 10px 18px;
+        margin: 0;
+    }
+
+    .contenedor02 {
+        width: 100%;
+        margin: 0;
+        height: auto;
+        padding: 18px 10px 18px;
+    }
+
+    .contenedor03 {
+        width: 100%;
+        margin: 20px 0 0;
+        height: auto;
+        padding: 23px;
+    }
+
+    .contenedor01>p,
+    .contenedor02>p,
+    .contenedor03>p {
+        font-family: Poppins;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        margin: 15px 0 0 0;
+        width: auto;
+    }
+
+    .contenedor03>p {
+        margin-top: 0 !important;
+    }
+
+    .contenedor01>img,
+    .contenedor02>img,
+    .contenedor03>img {
+        width: 54px;
+        height: 54px;
+        margin: 0;
+    }
+
+    .contenedor04 {
+        margin: 0;
+        height: auto;
+    }
+}
