--- a/src/Style/Usuario.css
+++ b/src/Style/Usuario.css
@@ -557,6 +557,7 @@
 
 
 }
+
 @media (max-width: 390px) {
     .usuario-container {
         max-width: 390px;
@@ -686,7 +687,50 @@
     }
 
     .contenedor04 {
-        margin: 0;
+        margin: 110px 0 0;
         height: auto;
+        padding: 84px 0 86px;
+        align-items: center;
+    }
+
+    .cont04-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo0-res {
+        width: auto;
+        height: auto;
+        padding-top: 0;
+        margin: 0 0 45px;
+    }
+
+    .texto-001-res {
+        color: #343434;
+        font-size: 20px;
+        margin-top: 0px;
+        width: 100%;
+        text-align: center;
+        margin-left: 0px;
+    }
+
+    .texto-002-res {
+        color: #565656;
+        font-size: 10px;
+        width: 100%;
+        margin-left: 0px;
+        margin-top: 21px;
+    }
+
+    .img3 {
+        float: none;
+        width: 100%;
+        height: 100%;
+        margin: 46px 0 61px;
+    }
+
+    .contenedor006 {
+        display: none;
     }
 }
